# SciProgAssignment2

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: MODIS_LST_KTM_AVG_MAY_2025_WGS84_Celsius_clipped.tif  ktm_bhktpr_ltpr_shapefile.gpkg  landuse_ndvi_lst_stats_2020.csv  landuse_ndvi_lst_stats_2025.csv  lst_may_landuse_zonal_stats.csv
data/May2015/: MODIS_Grid_8Day_1km_LST_2015_05_01_2015_05_08.tif.aux.xml  MODIS_Grid_8Day_1km_LST_2015_05_09_2015_05_16.tif.aux.xml  MODIS_Grid_8Day_1km_LST_2015_05_17_2015_05_24.tif.aux.xml  MODIS_Grid_8Day_1km_LST_2015_05_24_2015_06_01.tif.aux.xml
data/May2025/: T45RUL_20250509T045721_SCL_20m.jp2
data/output/: landuse_ndvi_lst_stats_2020.csv  landuse_ndvi_lst_stats_2025.csv  lst_may_landuse_zonal_stats.csv
sciprogassignment2/: landuse_from_osm_ktm.py  landuse_lst_zonal_stats.py  main.py  ndvi.py  ndvi_lst_landuse_analysis.py
