[project]
name = "sciprogassignment2"
version = "0.1.0"
description = "dependencies required for assignment 2"
authors = [
    {name = "Abhishek Adhikari, Meghraj Singh"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
